Closed
Bug 192631
Opened 23 years ago
Closed 18 years ago
Animated images stop animating after Print / Print Preview
Categories
(Core :: Printing: Output, defect)
Core
Printing: Output
Tracking
()
RESOLVED
FIXED
mozilla1.9beta5
People
(Reporter: smontagu, Assigned: martijn.martijn)
References
()
Details
(Keywords: regression, testcase)
Attachments
(1 file, 5 obsolete files)
|
2.56 KB,
patch
|
roc
:
review+
roc
:
superreview+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
My fix for bug 182259 seems to have been too heavy-handed: after print preview
of a page with animated images, the images stop animating in the browser.
Steps to reproduce: load http://www.burlco.info/moz/previmg/ or any page with
animated images
Print Preview - the images stop animating
Change from Portrait to Landscape and check that the images are still not
animated (this was bug 133808)
Close Print Preview
Expected results: animation should restart.
Actual results: it doesn't.
Updated•23 years ago
|
Keywords: regression
Comment 1•20 years ago
|
||
test URL no longer exists
Comment 2•19 years ago
|
||
*** Bug 353468 has been marked as a duplicate of this bug. ***
Updated•19 years ago
|
Severity: normal → minor
OS: Windows 2000 → All
Hardware: PC → All
Summary: Animated images stop animating after Print Preview → Animated images stop animating after Print / Print Preview
| Assignee | ||
Updated•19 years ago
|
Comment 3•18 years ago
|
||
1. visit http://en.wikipedia.org/wiki/Sieve_of_Eratosthenes (a gif)
2. print preview (or print)
animation stops.
animation begins where it left off if you do a page reload/refresh
| Assignee | ||
Comment 4•18 years ago
|
||
This seems to fix it.
Attachment #308347 -
Flags: review?(smontagu)
| Assignee | ||
Comment 5•18 years ago
|
||
Comment on attachment 308347 [details] [diff] [review]
patch
Ah, sorry, it only seems to fix the print preview case.
It doesn't fix the print case.
Attachment #308347 -
Flags: review?(smontagu)
| Assignee | ||
Comment 6•18 years ago
|
||
Ok, this duplicated code is probably too lame. I guess I should probably put it in a special function named ResetAnimationMode or something?
Or is the whole idea wrong?
Attachment #308352 -
Flags: review?(smontagu)
| Reporter | ||
Comment 7•18 years ago
|
||
Comment on attachment 308352 [details] [diff] [review]
patch
(In reply to comment #6)
> Ok, this duplicated code is probably too lame. I guess I should probably put it
> in a special function named ResetAnimationMode or something?
Yes, I think so. Having said that, I think you could find a better reviewer for this than me, like someone who's worked on printing code sometime in the last 5 years :)
Attachment #308352 -
Flags: review?(smontagu)
| Assignee | ||
Comment 8•18 years ago
|
||
Something like this?
Attachment #308347 -
Attachment is obsolete: true
Attachment #308352 -
Attachment is obsolete: true
Attachment #308529 -
Flags: review?(roc)
Attachment #308529 -
Attachment is patch: true
Attachment #308529 -
Attachment mime type: application/octet-stream → text/plain
You should share this code with nsPresContext::GetUserPreferences somehow, probably by making a method in nsPresContext that gets shared.
| Assignee | ||
Updated•18 years ago
|
Attachment #308529 -
Flags: review?(roc)
| Assignee | ||
Comment 10•18 years ago
|
||
Like this, perhaps?
| Assignee | ||
Updated•18 years ago
|
Attachment #308595 -
Flags: review?(roc)
Instead of ImageAnimationModePref(), why not just add a method RestoreAnimationMode that sets the mode to the pref? Comment #6 was right :-)
| Assignee | ||
Comment 12•18 years ago
|
||
Like this? (I keep trying)
Attachment #308529 -
Attachment is obsolete: true
Attachment #308595 -
Attachment is obsolete: true
Attachment #308595 -
Flags: review?(roc)
| Assignee | ||
Updated•18 years ago
|
Attachment #308757 -
Flags: review?(roc)
No, I mean a very small improvement over your last patch; instead of creating ImageAnimationModePref() and calling SetAnimationMode(ImageAnimationModePref()) in a few places, just create a one-line function RestoreAnimationMode() which sets mAnimationMode = mAnimationModePref.
| Assignee | ||
Comment 14•18 years ago
|
||
I tried that, but that doesn't work. I need to call SetAnimationMode to reanimate the images, no? Just changing mAnimationMode doesn't magically do that.
OK so have RestoreAnimationMode() call SetAnimationMode(mAnimationModePrefs)
| Assignee | ||
Comment 16•18 years ago
|
||
Ah, yeah, doh. Sorry about all the patches.
Attachment #308757 -
Attachment is obsolete: true
Attachment #308775 -
Flags: review?(roc)
Attachment #308757 -
Flags: review?(roc)
Attachment #308775 -
Flags: superreview+
Attachment #308775 -
Flags: review?(roc)
Attachment #308775 -
Flags: review+
Updated•18 years ago
|
Assignee: smontagu → martijn.martijn
| Assignee | ||
Comment 17•18 years ago
|
||
Comment on attachment 308775 [details] [diff] [review]
patch
This is really safe.
Attachment #308775 -
Flags: approval1.9?
Comment 18•18 years ago
|
||
Comment on attachment 308775 [details] [diff] [review]
patch
a1.9+=damons
Attachment #308775 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Updated•18 years ago
|
Keywords: checkin-needed
Comment 19•18 years ago
|
||
Checking in layout/base/nsDocumentViewer.cpp;
/cvsroot/mozilla/layout/base/nsDocumentViewer.cpp,v <-- nsDocumentViewer.cpp
new revision: 1.580; previous revision: 1.579
done
Checking in layout/base/nsPresContext.h;
/cvsroot/mozilla/layout/base/nsPresContext.h,v <-- nsPresContext.h
new revision: 3.200; previous revision: 3.199
done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta5
| Assignee | ||
Comment 20•18 years ago
|
||
Sigh, from within a frame, animated images still don't restart animating after printing/print preview, I filed bug 428357 for that.
You need to log in
before you can comment on or make changes to this bug.
Description
•