Bug 192631 - "Animated images stop animating after Print / Print Preview" [p=martijn.martijn@gmail.com (Martijn Wargers) r+sr=roc a1.9=damons]